--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "filepond": "^4.30.6",
+    "filepond-plugin-file-encode": "^2.1.14",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "filepond-plugin-image-resize": "^2.0.10",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1"
   },
